--- a/src/MusicTools/GuitarBundle/Resources/config/routing.yml
+++ b/src/MusicTools/GuitarBundle/Resources/config/routing.yml
@@ -1,3 +1,4 @@
-music_tools_guitar_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: MusicToolsGuitarBundle:Default:index }
+music_tools_guitar:
+    resource: "@MusicToolsGuitarBundle/Controller/"
+    type:     annotation
+    prefix:   /guitar
