--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /app/config/parameters.yml
 /app/logs/*
 !app/logs/.gitkeep
+/app/sessions/*
+!app/sessions/.gitkeep
 /app/phpunit.xml
 /bin/
 /composer.phar
