--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,16 +1,29 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
-    - { resource: services.yml }
 
-# Put parameters here that don't need to change on each machine where the app is deployed
-# http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
-parameters:
-    locale: en
+# moved into LocalizationBundle
+jms_i18n_routing:
+    default_locale: %locale%
+    locales:        %locales_available%
+    strategy:       prefix_except_default
+
+# moved into LocalizationBundle
+stof_doctrine_extensions:
+    default_locale: %locale%
+    translation_fallback: true
+    orm:
+        default:
+            translatable: true
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+
+    # moved into LocalizationBundle
+    translator:      { fallbacks: ["%locale%"] }
+    default_locale:  "%locale%"
+
+
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -18,58 +31,87 @@ framework:
     form:            ~
     csrf_protection: ~
     validation:      { enable_annotations: true }
-    #serializer:      { enable_annotations: true }
+
+    # moved into UserInterfaceBundle
     templating:
         engines: ['twig']
         #assets_version: SomeVersionScheme
-    default_locale:  "%locale%"
-    trusted_hosts:   ~
+
+
+
     trusted_proxies: ~
     session:
-        # handler_id set to null will use default session handler from php.ini
-        handler_id:  ~
+        name: "%app_name%"
+        handler_id: session.handler.native_file
+        save_path:  "%kernel.root_dir%/sessions"
     fragments:       ~
     http_method_override: true
 
-# Twig Configuration
+# Twig Configuration (moved into UserInterfaceBundle)
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form_themes: ['bootstrap_3_layout.html.twig']
 
-# Assetic Configuration
+
+# Assetic Configuration (moved into UserInterfaceBundle)
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
-    #java: /usr/bin/java
+    bundles:        [ ElorfinUserInterfaceBundle  ]
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
+        lessphp:
+            file: '%kernel.root_dir%/../vendor/oyejorge/less.php/lessc.inc.php'
+            apply_to: '\.less$'
+        cssmin:
+            file: '%kernel.root_dir%/../vendor/natxet/CssMin/src/CssMin.php'
+            apply_to: '\.css$|\.less$'
+        jsmin:
+            file: '%kernel.root_dir%/../vendor/werkint/jsmin/JsMin/Minify.php'
+            apply_to: '\.js$|\.twigjs$'
+
+    assets:
+        font-awesome-otf:
+            inputs: '%kernel.root_dir%/../vendor/fortawesome/font-awesome/fonts/FontAwesome.otf'
+            output: 'fonts/FontAwesome.otf'
+        font-awesome-eot:
+            inputs: '%kernel.root_dir%/../vendor/fortawesome/font-awesome/fonts/fontawesome-webfont.eot'
+            output: 'fonts/fontawesome-webfont.eot'
+        font-awesome-svg:
+            inputs: '%kernel.root_dir%/../vendor/fortawesome/font-awesome/fonts/fontawesome-webfont.svg'
+            output: 'fonts/fontawesome-webfont.svg'
+        font-awesome-ttf:
+            inputs: '%kernel.root_dir%/../vendor/fortawesome/font-awesome/fonts/fontawesome-webfont.ttf'
+            output: 'fonts/fontawesome-webfont.ttf'
+        font-awesome-woff:
+            inputs: '%kernel.root_dir%/../vendor/fortawesome/font-awesome/fonts/fontawesome-webfont.woff'
+            output: 'fonts/fontawesome-webfont.woff'
 
 # Doctrine Configuration
 doctrine:
     dbal:
-        driver:   pdo_mysql
+        driver:   "%database_driver%"
         host:     "%database_host%"
         port:     "%database_port%"
         dbname:   "%database_name%"
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
-        # if using pdo_sqlite as your database driver:
-        #   1. add the path in parameters.yml
-        #     e.g. database_path: "%kernel.root_dir%/data/data.db3"
-        #   2. Uncomment database_path in parameters.yml.dist
-        #   3. Uncomment next line:
-        #     path:     "%database_path%"
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+
+        # Moved into LocalizationBundle
+        entity_managers:
+            default:
+                auto_mapping: true
+                mappings:
+                    gedmo_translatable:
+                        type: annotation
+                        prefix: Gedmo\Translatable\Entity
+                        dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity"
+                        is_bundle: false
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -78,3 +120,10 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+
+# Moved into UserBundle
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Elorfin\UserBundle\Entity\User
