--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,6 +1,6 @@
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        FOS\UserBundle\Model\UserInterface: sha1
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -22,3 +22,6 @@ security:
                 csrf_provider: security.csrf.token_manager
             logout:       true
             anonymous:    true
+
+    access_control:
+        - { path: ^/my/, role: ROLE_USER }
