theme + Musician Bundle

--- a/app/config/bundles.yml
+++ b/app/config/bundles.yml
@@ -25,6 +25,7 @@ bundles:
         # Application bundles
         - MusicTools\HomeBundle\MusicToolsHomeBundle
         - MusicTools\NoteBundle\MusicToolsNoteBundle
+        - MusicTools\MusicianBundle\MusicToolsMusicianBundle
         - MusicTools\GuitarBundle\MusicToolsGuitarBundle
         - MusicTools\TuningBundle\MusicToolsTuningBundle
         - MusicTools\SongBookBundle\MusicToolsSongBookBundle
