--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -23,3 +23,8 @@ music_tools_guitar:
 music_tools_note:
     resource: "@MusicToolsNoteBundle/Resources/config/routing.yml"
     prefix:   /my
+
+# Routes for the User community
+music_tools_musician:
+    resource: "@MusicToolsMusicianBundle/Resources/config/routing.yml"
+    prefix:   /my/community
