--- a/src/MusicTools/GuitarBundle/Resources/config/routing.yml
+++ b/src/MusicTools/GuitarBundle/Resources/config/routing.yml
@@ -1,4 +1,4 @@
 music_tools_guitar:
     resource: "@MusicToolsGuitarBundle/Controller/"
     type:     annotation
-    prefix:   /guitar
+    prefix:   /
