--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+music_tools_resource:
+    resource: "@MusicToolsResourceBundle/Resources/config/routing.yml"
+    prefix:   /
+
 # Routes for User management
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
