try to use custom dotrine EntityListenerResolver (broken)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -103,6 +103,9 @@ doctrine:
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
 
+        # Moved into ReactorBundle
+        entity_listener_resolver: elorfin_reactor.doctrine.entity_listener_resolver
+
         # Moved into LocalizationBundle
         entity_managers:
             default:
