--- a/src/MusicTools/HomeBundle/Resources/config/routing.yml
+++ b/src/MusicTools/HomeBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-music_tools_home_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: MusicToolsHomeBundle:Default:index }
+resource: "@MusicToolsHomeBundle/Controller/"
+    type:     annotation
+    prefix:   /
