update upload dir

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,7 +7,7 @@ parameters:
     locale: en
     locales_available: [ en, fr ]
 
-    upload_dir: %kernel.root_dir%/../web/uploads
+    upload_dir: uploads
 
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
