--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,10 @@
         "sensio/distribution-bundle": "~4.0",
         "incenteev/composer-parameter-handler": "~2.0",
 
-        "elorfin/reactor-bundle": "dev-master",
-        "elorfin/user-interface-bundle": "dev-master",
-        "elorfin/localization-bundle": "dev-master",
-        "friendsofsymfony/user-bundle": "dev-master",
-        "elorfin/user-bundle": "dev-master"
+        "elorfin/reactor-bundle": "~1.0",
+        "elorfin/user-interface-bundle": "~1.0",
+        "elorfin/user-bundle": "~1.0",
+        "elorfin/localization-bundle": "~1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
