--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,8 +17,8 @@ music_tools_song_book:
     resource: "@MusicToolsSongBookBundle/Resources/config/routing.yml"
     prefix:   /my
 
-music_tools_guitar:
-    resource: "@MusicToolsGuitarBundle/Resources/config/routing.yml"
+music_tools_instrument:
+    resource: "@MusicToolsInstrumentBundle/Resources/config/routing.yml"
     prefix:   /my
 
 # Routes for the User community
