--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,7 @@ stof_doctrine_extensions:
     orm:
         default:
             translatable: true
+            loggable:     true
 
 framework:
     #esi:             ~
@@ -128,6 +129,12 @@ doctrine:
                         type: annotation
                         prefix: Gedmo\Translatable\Entity
                         dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity"
+                        is_bundle: false
+
+                    gedmo_loggable:
+                        type: annotation
+                        prefix: Gedmo\Loggable\Entity
+                        dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Loggable/Entity"
                         is_bundle: false
 
 # Swiftmailer Configuration
