remove template management from symfony

--- a/app/config/bundles/framework.yml
+++ b/app/config/bundles/framework.yml
@@ -25,8 +25,7 @@ framework:
 
     # Templating configuration
     templating:
-        engines:             [ "twig" ]
-        # assets_version:      "%app_version%"
+        engines:             [ "php" ]
 
     trusted_proxies:         ~
 
