--- a/app/config/routing/common.yml
+++ b/app/config/routing/common.yml
@@ -1,24 +1,39 @@
-# Routes for the public area
-showcase:
-    resource: components/showcase.yml
-    prefix:   /
+# Routes for Instrument
+music_tools_instrument:
+    resource: "@MusicToolsInstrumentBundle/Resources/config/routing.yml"
+    prefix:   /instrument
 
-# Routes for the workspace area
-workspace:
-    resource: components/workspace.yml
-    prefix:   /ws
+# Routes for SongBook
+music_tools_song_book:
+    resource: "@MusicToolsSongBookBundle/Resources/config/routing.yml"
+    prefix:   /song_book
 
-# Routes for the administration area
-administration:
-    resource: components/administration.yml
-    prefix:   /admin
+# Routes for Theory
+music_tools_theory:
+    resource: "@MusicToolsTheoryBundle/Resources/config/routing.yml"
+    prefix:   /theory
 
-# Routes which are not specific to an area
-elorfin_user_interface:
-    resource: "@ElorfinUserInterfaceBundle/Resources/config/routing.yml"
-    prefix:   /
+# Routes for Lesson
+music_tools_lesson:
+    resource: "@MusicToolsLessonBundle/Resources/config/routing.yml"
+    prefix:   /lesson
 
-# Routes for User management
-elorfin_user:
-    resource: "@ElorfinUserBundle/Resources/config/routing.yml"
-    prefix:   /
+# Routes for Game
+music_tools_game:
+    resource: "@MusicToolsGameBundle/Resources/config/routing.yml"
+    prefix:   /game
+
+# Routes for Musician
+music_tools_musician:
+    resource: "@MusicToolsMusicianBundle/Resources/config/routing.yml"
+    prefix:   /musician
+
+# Routes for Forum
+music_tools_forum:
+    resource: "@MusicToolsForumBundle/Resources/config/routing.yml"
+    prefix:   /forum
+
+# Routes for Advertisement
+music_tools_advertisement:
+    resource: "@MusicToolsAdvertisementBundle/Resources/config/routing.yml"
+    prefix:   /advert
