--- a/app/config/bundles/fos_rest.yml
+++ b/app/config/bundles/fos_rest.yml
@@ -4,3 +4,7 @@ fos_rest:
     routing_loader:
         default_format: json
         include_format: false
+
+    exception:
+        enabled: true
+        exception_controller: 'FOS\RestBundle\Controller\ExceptionController::showAction'
