--- a/web/client/bower.json
+++ b/web/client/bower.json
@@ -19,6 +19,7 @@
         "angular-bootstrap": "latest",
         "angular-translate": "latest",
         "angular-loading-bar": "latest",
-        "ng-file-upload": "latest"
+        "ng-file-upload": "latest",
+        "malihu-custom-scrollbar-plugin": "latest"
     }
 }
