--- a/app/config/routing/common.yml
+++ b/app/config/routing/common.yml
@@ -11,7 +11,7 @@ music_tools_song_book:
 # Routes for Theory
 music_tools_theory:
     resource: "@MusicToolsTheoryBundle/Resources/config/routing.yml"
-    prefix:   /theory
+    prefix:   /
 
 # Routes for Lesson
 music_tools_lesson:
