--- a/src/MusicTools/TheoryBundle/Resources/config/routing.yml
+++ b/src/MusicTools/TheoryBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ music_tools_theory_interval:
 music_tools_theory_note:
     resource: MusicTools\TheoryBundle\Controller\NoteController
     type:     rest
+
+music_tools_theory_chord:
+    resource: MusicTools\TheoryBundle\Controller\ChordController
+    type:     rest
