--- a/web/client/bower.json
+++ b/web/client/bower.json
@@ -21,6 +21,7 @@
         "angular-translate-interpolation-messageformat": "latest",
         "angular-loading-bar": "latest",
         "ng-file-upload": "latest",
-        "malihu-custom-scrollbar-plugin": "latest"
+        "malihu-custom-scrollbar-plugin": "latest",
+        "AlphaTab": "git://github.com/CoderLine/AlphaTab.git#master"
     }
 }
