--- a/src/MusicTools/InstrumentBundle/Resources/config/routing.yml
+++ b/src/MusicTools/InstrumentBundle/Resources/config/routing.yml
@@ -1,3 +1,12 @@
 music_tools_instrument:
     resource: MusicTools\InstrumentBundle\Controller\InstrumentController
     type:     rest
+
+music_tools_instrument_type:
+    resource: MusicTools\InstrumentBundle\Controller\InstrumentTypeController
+    type:     rest
+
+music_tools_instrument_template:
+    type:     rest
+    parent:   music_tools_instrument_type
+    resource: MusicTools\InstrumentBundle\Controller\InstrumentTemplateController
